--- a/WifiMonitor/WifiMonitor.csproj
+++ b/WifiMonitor/WifiMonitor.csproj
@@ -7,4 +7,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ManagedNativeWifi" Version="2.5.0" />
+  </ItemGroup>
+
 </Project>
