--- a/WifiMonitor/WifiMonitor.csproj
+++ b/WifiMonitor/WifiMonitor.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DataAccess\" />
+  </ItemGroup>
+
 </Project>
